Fix Lighthouse a11y issues: labels, heading order, contrast, video captions

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1655,11 +1655,6 @@ input:where([type='file']):focus {
   color: rgb(148 163 184 / var(--tw-text-opacity));
 }
 
-.text-slate-500 {
-  --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity));
-}
-
 .text-slate-900 {
   --tw-text-opacity: 1;
   color: rgb(15 23 42 / var(--tw-text-opacity));
